# Obsidian-Concierge

./: .env.example  .gitignore  README.md  TEST_PLAN.md  TODO.md  analysis_report.md  analysis_results.json  config.example.yaml  pyproject.toml  requirements.txt  setup.py
.cursor/: CODE_QUALITY.md  DOCUMENTATION.md  ENVIRONMENT.md  ERROR_HANDLING.md  LLM_INTEGRATION.md  LOGGING.md  MEMORY.md  PROMPT.md  RESPECT_PRD.md  SCIENTIFIC.md  STATIC_TYPE.md  STRUCTURE.md  TESTING_STRATEGY.md  TYPE_SYSTEM.md  WORKFLOW.md  ルール概要.md
.cursor/notes/: notebook.md
.cursor/rules/: CODE_QUALITY.mdc  CursorRuleSet1.mdc  CursorRuleSet2.mdc  CursorRuleSet3.mdc  DOCUMENTATION.mdc  DefinitionOfMVP.mdc  DevelopmentWorkflow.mdc  ENVIRONMENT.mdc  ERROR_HANDLING.mdc  LLM_INTEGRATION.mdc  LOGGING.mdc  MEMORY.mdc  MethodologyOfPRD.mdc  PROMPT.mdc  PreparingWorkflow.mdc  RESPECT_PRD.mdc  SCIENTIFIC.mdc  STATIC_TYPE.mdc  STRUCTURE.mdc  SearchBestPractice.mdc  TESTING_STRATEGY.mdc  TYPE_SYSTEM.mdc  WORKFLOW.mdc
data/chromadb/: chroma.sqlite3
doc/: file_structure.md
docs/: API_DOCUMENTATION.md  APP_FLOW.md  ARCHITECTURE.md  BACKEND_GUIDE.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEVELOPMENT_SETUP.md  PRD.md
docs/python_analysis/: obsidian_concierge_analysis.md  obsidian_concierge_db_analysis.md  obsidian_concierge_indexer_analysis.md  obsidian_concierge_utils_analysis.md  snippet_analysis.md  snippet_analytics_analysis.md  snippet_scripts_analysis.md  snippet_snippet_analysis.md  snippet_testing_analysis.md  snippet_utils_analysis.md  snippet_utils_logger_analysis.md  tests_analysis.md  tests_test_db_analysis.md  tests_test_indexer_analysis.md  tests_test_utils_analysis.md
obsidian_concierge/: __init__.py  cli.py  main.py
obsidian_concierge/api/: __init__.py  app.py  routes.py
obsidian_concierge/core/: __init__.py  qa.py  search.py
obsidian_concierge/db/: __init__.py  chroma.py
obsidian_concierge/indexer/: __init__.py  vault_indexer.py
obsidian_concierge/llm/: __init__.py  ollama.py
obsidian_concierge/models/: __init__.py
obsidian_concierge/repository/: __init__.py  chroma.py
obsidian_concierge/services/: __init__.py  qa.py  search.py
obsidian_concierge/static/: index.html
obsidian_concierge/static/css/: styles.css
obsidian_concierge/static/js/: app.js
obsidian_concierge/utils/: __init__.py  config.py  fs.py  logging.py
snippet/: __init__.py  cli.py  test_data_generator.py  validator.py
snippet/analytics/: __init__.py  cli.py  code_analyzer.py  report_generator.py  validator_integration.py
snippet/docs/: integration_examlpe.md  tool_guide.md  ツールの使い方.md
snippet/scripts/: __init__.py  analyze_python_files.py  check.bat  check_code_quality.py  code_complexity_checker.py  save_file_structure.py  setup_dev.bat
snippet/testing/: test_all.py
snippet/utils/: __init__.py  config_manage.py  env_loader.py  exception_handler.py  input_sanitizer.py  safe_file_ops.py
snippet/utils/logger/: basic_usage.py  contextual_logger.py  logger_manual.md
tests/: __init__.py  cli_tester.py  integration_tests.py
tests/test_db/: __init__.py  test_chroma.py
tests/test_indexer/: __init__.py  test_vault_indexer.py
tests/test_utils/: test_config.py  test_fs.py
