[tool.poetry]
name = "obsidian-concierge"
version = "0.1.0"
description = "LLMベースのObsidianアシスタント"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "obsidian_concierge"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
chromadb = "^0.4.22"
langchain = "^0.1.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
websockets = "^12.0"
aiofiles = "^23.2.1"
watchfiles = "^0.21.0"
markdown = "^3.5.2"
python-frontmatter = "^1.1.0"
pyyaml = "^6.0.1"
bandit = "^1.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
bandit = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
target-version = "py310"